# dll

./: .gitignore  CMakeLists.txt  ClienteCabal.vcxproj  README.md  build.bat  clean.bat  fix_dll_project.bat
gamehook_src/: Makefile  gamehook.rc  main.c  patchmem.c  patchmem.h
